[gd_scene load_steps=4 format=3 uid="uid://btbg452ehv3cs"]

[ext_resource type="Script" uid="uid://clkoipawy6nts" path="res://scripts/menu/main_menu.gd" id="1_sla5p"]

[sub_resource type="Shader" id="Shader_ui_background_gradient"]
code = "shader_type canvas_item;\n\nvoid fragment() {\n\tvec2 uv = UV;\n\tvec3 base = vec3(0.082, 0.086, 0.102);\n\tvec3 deep_blue = vec3(0.035, 0.094, 0.235);\n\tvec3 mid_blue = vec3(0.095, 0.165, 0.310);\n\tvec3 slate = vec3(0.120, 0.170, 0.240);\n\n\tfloat diagonal = clamp(1.0 - abs((uv.x * 1.15 + (1.0 - uv.y) * 0.9) - 0.95), 0.0, 1.0);\n\tdiagonal = smoothstep(0.0, 1.0, diagonal);\n\tfloat top_glow = pow(1.0 - uv.y, 1.8);\n\tfloat left_glow = pow(1.0 - uv.x, 2.3);\n\tvec2 center_delta = (uv - vec2(0.56, 0.45)) * vec2(1.05, 0.9);\n\tvec2 top_left_delta = (uv - vec2(0.18, 0.10)) * vec2(1.4, 0.9);\n\tfloat center_bloom = exp(-14.0 * dot(center_delta, center_delta));\n\tfloat top_left_bloom = exp(-18.0 * dot(top_left_delta, top_left_delta));\n\n\tvec3 col = base;\n\tcol = mix(col, slate, 0.28 * top_glow);\n\tcol += deep_blue * (0.42 * diagonal + 0.22 * top_left_bloom);\n\tcol += mid_blue * (0.22 * center_bloom + 0.12 * top_glow + 0.10 * left_glow);\n\n\tfloat vignette = smoothstep(0.95, 0.2, length((uv - vec2(0.5)) * vec2(1.35, 1.05)));\n\tcol *= (1.0 - 0.14 * vignette);\n\tCOLOR = vec4(col, 1.0);\n}\n"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ui_background_gradient"]
shader = SubResource("Shader_ui_background_gradient")

[node name="Main" type="Node"]

[node name="MainMenu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sla5p")

[node name="BackgroundGradient" type="ColorRect" parent="MainMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
material = SubResource("ShaderMaterial_ui_background_gradient")
mouse_filter = 2
color = Color(1, 1, 1, 1)

[node name="MarginContainer" type="MarginContainer" parent="MainMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu/MarginContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="UserName" type="LineEdit" parent="MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "Enter Username"

[node name="Spacer" type="Control" parent="MainMenu/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
size_flags_vertical = 4

[node name="IPLine" type="LineEdit" parent="MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "localhost"
placeholder_text = "Enter IP Address Here"

[node name="JoinBtn" type="Button" parent="MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Join"

[node name="Spacer3" type="Control" parent="MainMenu/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
size_flags_vertical = 4

[node name="StatusLabel" type="Label" parent="MainMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -24.5
offset_top = -11.5
offset_right = 24.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Status"
